syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message secretRandomLevel_toS {
    required int32 difficult = 1;
}

message secretRandomLevel_toC {
    optional int32 levelID = 1;
}